2018-09-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Leave an 
	'empty_line_after_command' element alone just as 
	'empty_spaces_after_command' is left alone.

2018-09-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/maintain/all_tests.sh <generate>: Use "set -e" to make
	script stop if a test script stops.

2018-09-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Set 'parent' on 
	'def_aggregate' element.

2018-09-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def, _split_def_args)
	(_split_delimiters): Set 'parent' on new elements.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line): Do not set 'def_args'
	extra value.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/TexinfoXML.pm (_convert),
	* tp/Texinfo/Convert/DocBook.pm (_convert): Use the def args in
	the main tree instead of the 'def_args' extra array.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Include inserted content on
	def line in main tree.
	* tp/Texinfo/Convert/Texinfo.pm (convert): Ignore this inserted 
	content when converting back to Texinfo.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def, _split_def_args),
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert): Give inserted 
	elements at front of def line the types 'bracketed_inserted'
	and 'spaces_inserted' instead of 'bracketed_def_content' and
	'spaces'.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Text.pm (_convert),
	* tp/Texinfo/Convert/Plaintext.pm (_convert),
	* tp/Texinfo/Convert/HTML.pm (_convert_def_line_type):
	Refer to 'def_parsed_hash' instead of 'def_args'.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (definition_arguments_content)
	(definition_category): Refer to 'def_parsed_hash' instead
	of 'def_args'.
